# MaxionBench

./: .dockerignore  .env.docker.example  .env.slurm.example  .gitignore  Dockerfile  Dockerfile.gpu  README.md  docker-compose.yml  maxionbench.def  pyproject.toml  run_docker_scenario.sh  run_slurm_pipeline.sh  run_workstation.sh  save_results_bundle.sh
.claude/: settings.local.json
.github/: pull_request_template.md
logs/: maxion_13101244.err  maxion_13103042.err  maxion_13103042.out  maxion_13103505.out  maxion_13105314.err  maxion_13105314.out  maxion_13107037.out  maxion_13107038.out  maxion_13107040.err  maxion_13107040.out  maxion_13108809.err  maxion_13108809.out  maxion_13108811.err  maxion_13108811.out  maxion_13108812.err  maxion_13108812.out  maxion_13110670.err  maxion_13110670.out  maxion_13110671.err  maxion_13110671.out  maxion_13110672.err  maxion_13110672.out  maxion_13117830.err  maxion_13117830.out  maxion_13117831.err  maxion_13117831.out  maxion_13117832.err  maxion_13117832.out  maxion_13117833.err  maxion_13117833.out  maxion_13117836.err  maxion_13117836.out  maxion_13117838.err  maxion_13117838.out  maxion_13117937.err  maxion_13117937.out  maxion_13117938.out  maxion_13117939.err  maxion_13117939.out  maxion_13117940.err  (+43 more)
maxionbench/: __init__.py  cli.py
maxionbench.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
results/: config.yaml  run_status.json
results_quick_check/: milvus_wait.json  opensearch_wait.json  pgvector_wait.json  qdrant_wait.json  weaviate_wait.json
scripts/: build_containers.sh
tests/: test_adapter_registry.py  test_agent_instruction_sync.py  test_archive.py  test_branch_protection_drift_workflow.py  test_branch_protection_policy_sync.py  test_cache_integrity.py  test_ci_protocol_audit.py  test_cli_run_dispatch.py  test_command_docs.py  test_conformance_configs.py  test_conformance_fixtures.py  test_conformance_matrix.py  test_conformance_runner.py  test_d1_loader.py  test_d2_loader.py  test_d3_calibrate.py  test_d3_calibration_trivial_rule.py  test_d3_generator.py  test_d3_vector_loader.py  test_d4_loader.py  test_d4_text_loader.py  test_dataset_manifest_pins.py  test_dataset_prefetch.py  test_docker_env_example.py  test_docker_workflow_files.py  test_download_d1.py  test_download_datasets.py  test_execute_run_matrix.py  test_faiss_cpu.py  test_healthcheck_timeouts.py  test_local_preflight.py  test_matched_quality.py  test_metrics.py  test_migration_docs.py  test_opensearch_adapter.py  test_optional_required_checks_sync.py  test_paper_scenario_configs.py  test_pgvector.py  test_pgvector_and_faiss_gpu_fixes.py  test_portable_reports.py  (+59 more)
(+326 files in other folders)
