[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maxionbench"
version = "0.1.0"
description = "MaxionBench v0.1 benchmark harness for retrieval and RAG infrastructure"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "pyarrow>=15.0",
  "PyYAML>=6.0",
  "requests>=2.31",
  "h5py>=3.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
engines = [
  "faiss-cpu>=1.8.0",
  "lancedb>=0.7.0",
  "opensearch-py>=2.6.0",
  "psycopg[binary]>=3.2.0",
  "pymilvus>=2.4.0",
  "weaviate-client>=4.6.0",
]
reporting = [
  "matplotlib>=3.8",
]

[project.scripts]
maxionbench = "maxionbench.cli:main"

[tool.setuptools.packages.find]
include = ["maxionbench*"]
