[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maxionbench"
version = "0.1.0"
description = "MaxionBench v0.1 benchmark harness for retrieval and RAG infrastructure"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "pyarrow>=15.0",
  "PyYAML>=6.0",
  "requests>=2.31",
  "h5py>=3.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
datasets = [
  "ansicolors==1.1.8",
  "docker==7.1.0",
  "h5py==3.10.*",
  "Jinja2==3.1.*",
  "matplotlib==3.10.*",
  "numpy==1.26.*",
  "pandas==2.3.*",
  "psutil==7.1.*",
  "pytz==2023.3.post1",
  "PyYAML==6.0.*",
  "scikit-learn==1.7.*",
  "scipy==1.16.*",
]
engines = [
  "faiss-cpu>=1.8.0",
  "lancedb>=0.7.0",
  "psycopg[binary]>=3.2.0",
  "qdrant-client>=1.9.0",
]
reporting = [
  "matplotlib>=3.8",
]
embeddings = [
  "torch>=2.2",
  "transformers>=4.41.0",
]
rerank = [
  "transformers>=4.41.0",
]

[project.scripts]
maxionbench = "maxionbench.cli:main"

[tool.setuptools.packages.find]
include = ["maxionbench*"]
